Fix: Edge ScrollBar Test (#119)

--- a/src/assets/layout/styles/layout/sidebar/_sidebar_horizontal.scss
+++ b/src/assets/layout/styles/layout/sidebar/_sidebar_horizontal.scss
@@ -14,6 +14,11 @@
                 .layout-menu-container {
                     overflow: auto;
                     padding-bottom: 0;
+                    
+                    &::-webkit-scrollbar {
+                        display: none;
+                    }
+                    
                 }
             }
 
@@ -94,6 +99,10 @@
                         overflow: auto;
                         z-index: 999;
 
+                        &::-webkit-scrollbar {
+                            display: none;
+                        }
+                        
                         a {
                             padding-right: .5rem;
                         }
