--- a/src/assets/layout/styles/layout/sidebar/_sidebar_slim.scss
+++ b/src/assets/layout/styles/layout/sidebar/_sidebar_slim.scss
@@ -8,6 +8,10 @@
 
                 .layout-menu-container {
                     overflow: auto;
+
+                    &::-webkit-scrollbar {
+                        display: none;
+                    }
                 }
             }
 
@@ -95,7 +99,11 @@
                         overflow: auto;
                         z-index: 999;
                         box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
-
+    
+                        &::-webkit-scrollbar {
+                            display: none;
+                        }
+                        
                         a {
                             padding-right: .5rem;
                         }
